<resources>
    <string name="app_name">Kladdie</string>
    <string name="terms_conditions">By clicking Register, you agree to our Terms and Conditions</string>
    <string name="required">Required</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="register">REGISTER</string>
    <string name="create_a_password_8_characters">Create a Password (8+ Characters)</string>
    <string name="location">Location</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="join_the_community">Join the Community!</string>
    <string name="already_have_an_account_login_here">Already have an account? Login Here.</string>
    <string name="login">LOGIN</string>
    <string name="forgot">Forgot Password?</string>
    <string name="show_pwd">Show Password</string>
    <string name="password">Password</string>
    <string name="newUser">No account? Register Here!</string>
    <string name="discover_kladdie">Discover Kladdie</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="category">Category</string>
    <string name="shirts">Shirts</string>
    <string name="jacket">Jackets</string>
    <string name="pants">Pants</string>
    <string name="trending_outfits_right_now">TRENDING OUTFITS RIGHT NOW...</string>
    <string name="women_s_winter_outfit">Women\'s Winter Outfit</string>
    <string name="kes_3000">KES 3000</string>
    <string name="men_s_summer_outfit">Men\'s Summer Outfit</string>
    <string name="kes_4000">KES 4000</string>
    <string name="women_s_goth_outfit">Women\'s Goth Outfit</string>
    <string name="kes_2500">KES 2500</string>
    <string name="men_s_autumn_outfit">Men\'s Autumn Outfit</string>
    <string name="kes_4500">KES 4500</string>
    <string name="beige_wardrobe">Beige Wardrobe</string>
    <string name="kes_10000">KES 10000</string>
    <string name="men_s_fall_outfit">Men\'s Fall Outfit</string>
    <string name="kes_3500">KES 3500</string>
    <string name="favorites">Favorites</string>
    <string name="collection">Collection</string>
    <string name="history">History</string>
    <string name="shoe">Shoes/Sneakers</string>
    <string name="buy_now">Buy Now</string>
    <string name="txt">Winters are here. The season of juicy apples and dry skin has set in again. Days will be shorter and nights will be long. One needs to completely rearrange their wardrobes in order to fit in with the winter style. New clothes and sweaters will have to be purchased to protect one\'s body from cold. But these clothes should not spoil the overall appearance of a person. It should only increase their appeal. Attractive and functional winter apparel will need to be purchased.</string>
    <string name="for_you">For You</string>
</resources>