<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:padding="20dp" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/covered_by_your_grace"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/white_grey"
            android:textSize="75sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_border"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/glegoo"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/bg_color" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
            android:drawablePadding="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/glegoo"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/bg_color" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
            android:drawablePadding="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/glegoo"
            android:gravity="center_vertical"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_bg"
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/register"
            android:textAlignment="center"
            android:fontFamily="@font/glegoo"
            android:textColor="@color/bg_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/alreadyUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/covered_by_your_grace"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/already_have_an_account_login_here"
        android:textColor="@color/white"
        android:textSize="25sp" />

</RelativeLayout>